# hetero-async-moe-rl-notes

./: .gitignore  .gitmodules  AGENTS.md  B1 run log.md  B1 — OLMoE Bring-up.md  B2 run log.md  B2 update post.md  Benchmark Comparison.md  Direction Validation.md  Home.md  Inference.md  Initial Plan 2.md  Initial Plan.md  MoE Architecture.md  MoE serving optimization plan.md  MoE vs Dense Workload.md  Paper Direction - v2.md  Paper Direction.md  Plan Logic Check.md  README.md  Research Plan 2.md  Research Plan.md  TierShift cache design.md  Training.md  Transformer.md  first_benchmark_results.md
.obsidian/: community-plugins.json  graph.json  workspace.json
Deep Dives/: Attention Variants.md  Dense Inference Systems.md  Dense Training Systems.md  FFN Variants and Other Sublayers.md  MoE Inference Systems.md  MoE Load Balancing.md  MoE Routing.md  (+1 more)
code/b1/: README.md  RUNBOOK.md  TRACK_A.md  pins.txt  pyproject.toml  setup-node.sh  setup.sh
code/b1/configs/: infer-fast.toml  infer-hetero.toml  infer-slow.toml  orch.toml  smoke-train.toml  train.toml
code/b1/sandbox/: images.txt  make_images_list.py  prewarm.sh  run_test.sh
code/b1/slurm/: _env.sh  check-node.sh  run-config.sbatch  smoke-trainer.sh
code/b1/src/b1tel/: __init__.py  charts.py  sampler.py  telemetry.py
code/b2/: HANDOFF.md  QWEN_RUN_CONDITIONS.md  README.md  RUNBOOK.md  fleet_cost.json  pins.txt  pyproject.toml  setup.sh
code/b2/slurm/: check-node.sh
code/b2/src/b2tel/: __init__.py  analysis.py  charts.py  make_trace.py  migrate_bench.py  replay.py  simulate.py  telemetry.py  tier_bench.py
(+63 files in other folders)
