[project]
name = "b1tel"
version = "0.0.1"
description = "Instrumentation/telemetry for the OLMoE async MoE-RL bring-up (B1)"
requires-python = ">=3.11"
dependencies = [
    "orjson>=3.10",     # fast JSONL
    "polars>=1.0",      # telemetry analysis
    "matplotlib>=3.8",  # charts
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/b1tel"]
