[project]
name = "b2tel"
version = "0.0.1"
description = "Telemetry + offline analysis for the B2/TierShift MoE expert-hotness × tier benchmark"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",      # windowed load math + simulator
    "matplotlib>=3.8",  # Q1–Q7 charts
    "orjson>=3.10",     # fast JSONL (optional; stdlib json fallback in telemetry.py)
]

# Trace building (make_trace.py) optionally pulls HF datasets; not required for the
# micro-benches/sim, which read captured JSONL. Install on demand:
#   pip install "b2tel[trace]"
[project.optional-dependencies]
trace = ["datasets>=2.18"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/b2tel"]
